--- a/css/demo.css
+++ b/css/demo.css
@@ -151,7 +151,8 @@ a:focus {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	padding: 0 7em;
+	/*padding: 0 7em;*/
+	margin-top:30px;
 	perspective: 800px;
 	perspective-origin: 50% 100%;
 }
