--- a/css/demo.css
+++ b/css/demo.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	font-family: 'Overpass Mono', monospace;
+	*font-family: 'Overpass Mono', monospace;
 	color: #edecf2;
 	*background: #37373e;
 	-webkit-font-smoothing: antialiased;
@@ -154,7 +154,7 @@ a:focus {
 	/*padding: 0 7em;*/
 	perspective: 800px;
 	perspective-origin: 50% 100%;
-	width: 990px;
+	width: 880px;
     margin-top: 100px;
 	margin-left:150px;
 }
