--- a/style.css
+++ b/style.css
@@ -36,6 +36,21 @@
 	bottom:0px;
 }
 
+.trashcan
+{
+	left:0px;
+	top:10px;
+	display:block;
+	z-index:101;
+}
+
+.trashcan_open
+{
+	left:0px;
+	top:10px;
+	z-index:101;
+}
+
 .error_icon
 {
     margin-right: 7px;
@@ -63,4 +78,26 @@
     background-color: #ffffff47;
     padding: 10px 20px;
     border: 1px solid;
+}
+
+#pu_title_error
+{
+	font-family: Arial,Helvetica,sans-serif;
+	font-weight: bold;
+	color: yellow;
+	background: rgb(255, 62, 48);
+	padding:3px;
+	cursor:pointer;
+}
+
+.trashcan_container
+{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 40px;
+    left: 10px;
+	
+	z-index:102;
+	display:none;
 }
