--- a/css/demo.css
+++ b/css/demo.css
@@ -150,12 +150,10 @@ a:focus {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	*width: 100%;
-	/*padding: 0 7em;*/
 	perspective: 800px;
 	perspective-origin: 50% 100%;
-	width: 880px;
-    margin-top: 100px;
+	width: 1100px;
+   * margin-top: 100px;
 	margin-left:150px;
 }
 
@@ -163,7 +161,7 @@ a:focus {
 	position: relative;
 	display: block;
 	flex: none;
-	width: 110px;
+	width: 200px;
 	margin: 1px;
 	cursor: default;
 	transform-style: preserve-3d;
@@ -195,7 +193,8 @@ a:focus {
 .stack {
 	position: relative;
 	width: 100%;
-	height: 100px;
+	*height: 100px;
+	height: 200px;
 	transform-style: preserve-3d;
 }
 
