--- a/css/demo.css
+++ b/css/demo.css
@@ -16,7 +16,7 @@ body {
 a {
 	text-decoration: none;
 	color: #ff3d53;
-	outline: none;
+	*outline: none;
 	transition: color 0.2s;
 }
 
@@ -152,9 +152,6 @@ a:focus {
 	align-items: center;
 	perspective: 800px;
 	perspective-origin: 50% 100%;
-	width: 1100px;
-   * margin-top: 100px;
-	margin-left:150px;
 }
 
 .grid__item {
@@ -169,7 +166,7 @@ a:focus {
 
 .grid__item:hover,
 .grid__item:focus {
-	outline: none;
+	*outline: none;
 }
 
 .grid__item--c1,
