--- a/css/demo.css
+++ b/css/demo.css
@@ -11,6 +11,8 @@ body {
 	*background: #37373e;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	height: 100%;
+	overflow: hidden;
 }
 
 a {
